# claude-dev-container

./: .gitignore  .test-skip  AGENTS.md  AGENT_INSTRUCTIONS.md  CLAUDE.md  README.md
.beads/: issues.jsonl
.claude/: test-strategy.md
backend/: .env.example  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  prompts.py
backend/app/services/: __init__.py  beads.py  containers.py  projects.py
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: __init__.py  mock_docker.py
backend/tests/integration/: __init__.py  test_api_actions.py  test_api_attach.py  test_api_beads.py  test_api_health.py  test_api_projects.py  test_exec_claude.py  test_rate_limiting.py
backend/tests/unit/: __init__.py  test_beads.py  test_containers.py  test_projects.py
docker/: Dockerfile
docs/: AGENT_CHALLENGES.md  AGENT_WORKFLOW.md  BACKEND_PLAN.md  CONTAINER_PLAN.md  CURRENT_STATE.md  DESIGN_DECISIONS.md  FRONTEND_PLAN.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_PHASES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PR_REVIEW_GUIDE.md  README.md  SIMPLIFIED_PLAN.md  TESTING_GUIDE.md  TESTING_PHILOSOPHY.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md
examples/: README.md  adding-api-endpoint.md  adding-component.md  implementing-bead.md  session-workflow.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
prompts/: project-review.md
scripts/: overnight-batch.sh
(+45 files in other folders)
